--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -2,13 +2,17 @@
   "short_name": "Reminder App",
   "name": "Reminder Assistant",
   "version": "1.0.0",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "Your reminder assistant",
   "icons": {
+    "16": "logo512.png",
+    "48": "logo512.png",
+    "128": "logo512.png",
     "512": "logo512.png"
   },
-  "browser_action": {
+  "permissions": ["storage"],
+  "action": {
     "default_icon": "logo512.png",
-    "default_popup": "popup.html"
+    "default_popup": "index.html"
   }
 }
